depends/bigfile/src/bigfile-internal.h

/* the internal code to free meta-data associated with a block. */
void _big_block_close_internal(BigBlock * block);
/* Internal routine to serialize/deserialize a block. */

void *
_big_block_pack(BigBlock * block, size_t * bytes);
void
_big_block_unpack(BigBlock * block, void * buf);